# ChatLegal

./: .env.example  .gitignore  COMMAND_LIST.md  Dockerfile  HUONG_DAN_CHAY.md  README.md  app.py  docker-compose.yml  implementation_plan_v2.md  pyproject.toml
config/: logging_config.yaml  model_config.yaml
data/processed/legal_docs/: legal_chunks.json
data/raw/legal_docs/: 11716.json  134278.json  147004.json  (+9 more)
notebooks/: data_visualization.ipynb
scripts/: __init__.py  build_embeddings.py  build_qa_embeddings.py  crawl_legal_docs.py  crawl_qa_dataset.py  evaluate.py  preprocess_qa_dataset.py
scripts/manual/: health_check.py  test_ollama.py  verify_reranker_real.py
src/: __init__.py  settings.py
src/api/: main.py
src/core/: __init__.py  base_llm.py  model_factory.py  ollama_client.py
src/database/: __init__.py  models.py  mongo_client.py
src/evaluation/: __init__.py  golden_dataset.py  ragas_eval.py
src/inference/: __init__.py  inference_engine.py  intent_router.py  query_reflector.py  response_parser.py
src/processing/: __init__.py  chunking.py  preprocessor.py  qa_preprocessor.py  tokenizer.py
src/prompts/: __init__.py  chain.py  templates.py
src/rag/: __init__.py  embedder.py  indexer.py  reranker.py  retriever.py  vector_store.py
tests/: test_chunking.py  test_indexer.py  test_inference.py  test_preprocessor.py  test_prompts.py  test_query_reflector.py  test_reranker.py  test_response_parser.py  test_retriever.py
tmp/: check_decree_102.py  inspect_db.py  inspect_titles.py  test_search.py  test_search_clean.py  validate_json.py
